--- a/Code/Master DE.html
+++ b/Code/Master DE.html
@@ -17969,7 +17969,7 @@ dtype: float64
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
-<pre>/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2025/1521521114.py:2: SettingWithCopyWarning: 
+<pre>/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2177/1521521114.py:2: SettingWithCopyWarning: 
 A value is trying to be set on a copy of a slice from a DataFrame.
 Try using .loc[row_indexer,col_indexer] = value instead
 
@@ -18287,7 +18287,7 @@ dtype: float64
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
-<pre>/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2025/618722420.py:2: SettingWithCopyWarning: 
+<pre>/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2177/618722420.py:2: SettingWithCopyWarning: 
 A value is trying to be set on a copy of a slice from a DataFrame.
 Try using .loc[row_indexer,col_indexer] = value instead
 
@@ -18714,18 +18714,18 @@ dtype: float64
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
-<pre>/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2025/4101234951.py:11: SettingWithCopyWarning: 
+<pre>/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2177/4101234951.py:11: SettingWithCopyWarning: 
 A value is trying to be set on a copy of a slice from a DataFrame.
 Try using .loc[row_indexer,col_indexer] = value instead
 
 See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
   challenger_df[&#39;EVER_CHALLENGER&#39;] = &#39;Yes&#39;
-/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2025/4101234951.py:14: SettingWithCopyWarning: 
+/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2177/4101234951.py:14: SettingWithCopyWarning: 
 A value is trying to be set on a copy of a slice from a DataFrame
 
 See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
   challenger_df.drop([&#39;TITLE&#39;], axis=1, inplace = True)
-/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2025/4101234951.py:17: SettingWithCopyWarning: 
+/var/folders/_6/_1qflrx12_j4kc3ssfs46ldw0000gn/T/ipykernel_2177/4101234951.py:17: SettingWithCopyWarning: 
 A value is trying to be set on a copy of a slice from a DataFrame
 
 See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
@@ -23598,7 +23598,7 @@ dtype: float64
 
 <span class="n">master_df</span><span class="p">[</span><span class="s1">&#39;OPP_EVER_CHALLENGER&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">master_df</span><span class="p">[</span><span class="s1">&#39;OPP_EVER_CHALLENGER&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">fillna</span><span class="p">(</span><span class="s1">&#39;No&#39;</span><span class="p">)</span>
 
-<span class="n">master_refined</span> <span class="o">=</span> <span class="n">master_df</span>
+<span class="n">master_df2</span> <span class="o">=</span> <span class="n">master_df</span>
 </pre></div>
 
      </div>
@@ -23614,7 +23614,7 @@ dtype: float64
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[51]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">master_refined</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="s2">&quot;/Users/michaelbyrd/Desktop/MIS556/master_refined.csv&quot;</span><span class="p">,</span> <span class="n">index</span> <span class="o">=</span> <span class="kc">False</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">master_df2</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="s2">&quot;/Users/michaelbyrd/Desktop/MIS556/master_df2.csv&quot;</span><span class="p">,</span> <span class="n">index</span> <span class="o">=</span> <span class="kc">False</span><span class="p">)</span>
 </pre></div>
 
      </div>
